--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server/server.js"
-      },
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/adamlsn/busted-brackets.git"
@@ -22,6 +22,7 @@
     "apollo-server-express": "^3.0.2",
     "express": "^4.17.1",
     "graphql": "^15.5.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.4"
   }
 }
