--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^12.8.3",
     "apollo-boost": "^0.4.9",
     "bootstrap": "^5.0.2",
+    "graphql": "^15.5.1",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-brackets": "^0.4.6",
