--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server/server.js",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
-    "build": "cd client && npm run build"
+    "seed": "cd server && npm run seed"
   },
   "repository": {
     "type": "git",
@@ -27,5 +26,8 @@
     "graphql": "^15.5.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.4"
+  },
+  "devDependencies": {
+    "concurrently": "^6.2.0"
   }
 }
